
- With plugins "svremove", "svrename" and "tsrename", the removal or renaming
  now also apply to EIT's. The new option --ignore-eit can be used to prevent
  this.

- The plugin "regulate" can now also use the PCR from the TS to regulate the
  transmission. Previously, the regulation was done on bitrate only. Added
  options are --pcr-synchronous, --pid-pcr and --wait-min.

- Added option --tos to output plugin "ip".

Version 3.12-778

- Added plugin "merge" which merges two transport streams.

- Added option --realtime to "tsp". This option selects appropriate default
  options when operating on real-time streamings. The "default defaults" remain
  appropriate for offline processing, such as working on transport streams files.
  This option is also automatically set by some plugins which are designed for
  real-time streaming ("dvb", "ip", dektec", "play", "regulate", "mpeinject").

- The option --reuse-port is now on by default on all commands and plugins which
  use it. A new option --no-reuse-port has been added everywhere to disable the
  option explicitly (although probably never used).

- Added options --log-protocol and --log-data to "tsecmg", "tsemmg" and plugins
  "scrambler", "datainject".

- Added options --udp and --unregulated to plugin "datainject".

- Many more descriptors are supported. See the user's guide.

- On Windows, portable packages are now built for users without admin privilege.

- Bug fix: If an XML representation of a splice information table contained a
  splice_insert command, the <break_duration> structure was rejected when the
  event was marked as immediate.

- Bug fix: In "tsemmg", the TCP disconnection of the MUX was not detected in a
  timely fashion when data was injected using UDP.

- Bug fix: In "tsemmg", sending UDP data to a broadcast address was not allowed.
  Now it is possible to send data to a local broadcast address. Using routed
  broadcast remains not possible (because this is usually not a good thing to